--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trendit-v2",
+  "name": "gidda",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -31,6 +31,7 @@
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.0",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
